samples/_failures_safe/1761438985_cc862e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3e57cff.c: In function ‘main’:
./samples/SAFE/__tmp_e3e57cff.c:153:9: error: expected declaration or statement at end of input
  153 |         if (distances[i] == INT_MAX) {
      |         ^~
./samples/SAFE/__tmp_e3e57cff.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3e57cff.c:153:9: error: expected declaration or statement at end of input
